More Windows fixes